# rules_odin

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  REPO.bazel  SECURITY.md  _typos.toml
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  config.yml
.github/workflows/: check.yaml  ci.yml  publish.yaml  release-prep-test.yaml  release.yaml  release_prep.sh  scorecard.yaml  tag.yaml
e2e/bcr_smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
e2e/bcr_smoke/hello/: hello.odin
e2e/bcr_smoke/lib/: greetings.odin
e2e/bcr_smoke/tests/: smoke_test.odin
e2e/failure_propagation/: .bazelrc  BUILD.bazel  MODULE.bazel  check_exit_code.sh
e2e/failure_propagation/tests_fail/: failing_test.odin
e2e/hermetic/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/hermetic/hello/: hello.odin
e2e/hermetic/lib/: greetings.odin
e2e/hermetic/tests/: hermetic_test.odin
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/smoke/hello/: hello.odin
odin/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
odin/private/: BUILD.bazel  binary.bzl  common.bzl  library.bzl  odin_sdk.BUILD.bazel  test.bzl  toolchains_repo.bzl  versions.bzl
odin/tests/: BUILD.bazel
tools/: preset.bazelrc
