"""Failure propagation test — validates odin_test exits non-zero on test failure."""

module(
    name = "rules_odin_e2e_failure_propagation",
    version = "0.0.0",
)

bazel_dep(name = "rules_odin", version = "0.1.0")
local_path_override(
    module_name = "rules_odin",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_shell", version = "0.8.0")

odin = use_extension("@rules_odin//odin:extensions.bzl", "odin")
odin.toolchain(odin_version = "dev-2026-06")
use_repo(odin, "odin_toolchains")

register_toolchains("@odin_toolchains//:all")
