"""Hermetic-linking e2e workspace.

Proves opt-in hermetic Linux linking: the Odin linker driver is pointed at a
hermetic clang+lld (from toolchains_llvm) and a pinned Chromium sysroot,
staged as Bazel action inputs, with no host clang/ld/libc. Built with
--@rules_odin//odin:hermetic_linker=true (see .bazelrc).

Uses rules_odin from the parent directory via local_path_override.
"""

module(
    name = "rules_odin_hermetic_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_odin", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_odin",
    path = "../..",
)

# Bumped above the repo's usual 1.7.1/0.0.10 to match the versions
# toolchains_llvm transitively resolves, avoiding a direct-dependency skew
# warning. This is scoped to the hermetic e2e workspace only.
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)

odin = use_extension("@rules_odin//odin:extensions.bzl", "odin")
odin.toolchain(odin_version = "dev-2026-06")
use_repo(odin, "odin_toolchains")

register_toolchains("@odin_toolchains//:all")

# Bring-your-own hermetic C toolchain + sysroot. rules_odin does not depend on
# these; the consumer wires them and points the odin targets' hermetic_* attrs
# at the resulting labels.
bazel_dep(name = "toolchains_llvm", version = "1.8.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_arm64//sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain_llvm")

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

sysroot(
    name = "org_chromium_sysroot_linux_x64",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)

sysroot(
    name = "org_chromium_sysroot_linux_arm64",
    sha256 = "e39b700d8858d18868544c8c84922f6adfa8419f3f42471b92024ba38eff7aca",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_arm64_sysroot.tar.xz"],
)
