load("@rules_odin//odin:defs.bzl", "odin_binary", "odin_library", "odin_test")

# SPIKE EXPERIMENT (do not merge): on Linux, point Odin's linker driver at the
# hermetic toolchains_llvm clang+lld and the pinned Chromium sysroot. On
# macOS/Windows these select to empty (None / []), so those platforms keep the
# existing host-linker path unchanged.

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

_HERMETIC_CLANG = select({
    "@platforms//os:linux": "@llvm_toolchain_llvm//:bin/clang",
    "//conditions:default": None,
})

_HERMETIC_TOOLCHAIN_FILES = select({
    "@platforms//os:linux": "@llvm_toolchain_llvm//:bin",
    "//conditions:default": None,
})

_HERMETIC_SYSROOT = select({
    ":linux_x86_64": "@org_chromium_sysroot_linux_x64//sysroot",
    ":linux_aarch64": "@org_chromium_sysroot_linux_arm64//sysroot",
    "//conditions:default": None,
})

# Per-arch linker flags for the Chromium debian_stretch (GCC 6) sysroot. The
# {SYSROOT} placeholder is substituted by common.bzl with the staged sysroot
# tree root. libc.so/libm.so/libgcc_s.so are GNU-ld linker scripts with
# absolute paths, so --sysroot is required in addition to -B/-L.
_HERMETIC_LINKER_FLAGS = select({
    ":linux_x86_64": [
        "--target=x86_64-linux-gnu",
        "--sysroot={SYSROOT}",
        "-B{SYSROOT}/usr/lib/gcc/x86_64-linux-gnu/6/",
        "-L{SYSROOT}/usr/lib/gcc/x86_64-linux-gnu/6",
        "-L{SYSROOT}/usr/lib/x86_64-linux-gnu",
        "-L{SYSROOT}/lib/x86_64-linux-gnu",
    ],
    ":linux_aarch64": [
        "--target=aarch64-linux-gnu",
        "--sysroot={SYSROOT}",
        "-B{SYSROOT}/usr/lib/gcc/aarch64-linux-gnu/6/",
        "-L{SYSROOT}/usr/lib/gcc/aarch64-linux-gnu/6",
        "-L{SYSROOT}/usr/lib/aarch64-linux-gnu",
        "-L{SYSROOT}/lib/aarch64-linux-gnu",
    ],
    "//conditions:default": [],
})

odin_library(
    name = "greetings",
    srcs = glob(["lib/*.odin"]),
)

odin_binary(
    name = "hello",
    srcs = glob(["hello/*.odin"]),
    hermetic_clang = _HERMETIC_CLANG,
    hermetic_linker_flags = _HERMETIC_LINKER_FLAGS,
    hermetic_sysroot = _HERMETIC_SYSROOT,
    hermetic_toolchain_files = _HERMETIC_TOOLCHAIN_FILES,
    deps = [":greetings"],
)

odin_test(
    name = "smoke_test",
    srcs = glob(["tests/*.odin"]),
    hermetic_clang = _HERMETIC_CLANG,
    hermetic_linker_flags = _HERMETIC_LINKER_FLAGS,
    hermetic_sysroot = _HERMETIC_SYSROOT,
    hermetic_toolchain_files = _HERMETIC_TOOLCHAIN_FILES,
    deps = [":greetings"],
)
