"""Smoke test workspace — uses rules_odin from the parent directory via local_path_override."""

module(
    name = "rules_odin_smoke_test",
    version = "0.0.0",
)

# Version is inert under the local_path_override below; 0.0.0 is a placeholder.
bazel_dep(name = "rules_odin", version = "0.0.0")
local_path_override(
    module_name = "rules_odin",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

odin = use_extension("@rules_odin//odin:extensions.bzl", "odin")
odin.toolchain(odin_version = "dev-2026-06")
use_repo(odin, "odin_toolchains")

register_toolchains("@odin_toolchains//:all")
