"""Smoke test workspace — uses rules_odin from the parent directory via local_path_override."""

module(
    name = "rules_odin_smoke_test",
    version = "0.0.0",
)

# Version is inert under the local_path_override below; 0.0.0 is a placeholder.
bazel_dep(name = "rules_odin", version = "0.0.0")
local_path_override(
    module_name = "rules_odin",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

odin = use_extension("@rules_odin//odin:extensions.bzl", "odin")
odin.toolchain(odin_version = "dev-2026-06")
use_repo(odin, "odin_toolchains")

register_toolchains("@odin_toolchains//:all")

# ---------------------------------------------------------------------------
# SPIKE EXPERIMENT (do not merge): hermetic Linux linker via toolchains_llvm.
# Provides a real single `clang` binary + bundled lld that Odin's linker
# driver can be pointed at via ODIN_CLANG_PATH, plus a pinned Chromium sysroot
# so the link resolves crt/glibc/libgcc from a pinned tree, not the host.
# Only the odin targets that set the hermetic_* attrs consume these.
# ---------------------------------------------------------------------------
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_arm64//sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain_llvm")

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

sysroot(
    name = "org_chromium_sysroot_linux_x64",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)

sysroot(
    name = "org_chromium_sysroot_linux_arm64",
    sha256 = "e39b700d8858d18868544c8c84922f6adfa8419f3f42471b92024ba38eff7aca",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_arm64_sysroot.tar.xz"],
)
