"""Private implementation package for rules_odin."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//odin:__subpackages__"])

exports_files([
    "odin_sdk.BUILD.bazel",
])

bzl_library(
    name = "common_bzl",
    srcs = ["common.bzl"],
)

bzl_library(
    name = "library_bzl",
    srcs = ["library.bzl"],
    deps = [":common_bzl"],
)

bzl_library(
    name = "binary_bzl",
    srcs = ["binary.bzl"],
    deps = [":common_bzl"],
)

bzl_library(
    name = "test_bzl",
    srcs = ["test.bzl"],
    deps = [":common_bzl"],
)

bzl_library(
    name = "versions_bzl",
    srcs = ["versions.bzl"],
)

bzl_library(
    name = "toolchains_repo_bzl",
    srcs = ["toolchains_repo.bzl"],
)
